cleanup and fixing eclipse import issues with m2e